[gd_scene load_steps=31 format=2]

[ext_resource path="res://Graphics/Environment/sign.png" type="Texture" id=1]
[ext_resource path="res://Scenes/DoorMovements.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Sign.gd" type="Script" id=3]
[ext_resource path="res://Graphics/Environment/TileBlank.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Environment/TileSide.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Environment/TileDiag.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Environment/TilesEdge.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Environment/TileCorner.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Environment/spike1.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Door.tscn" type="PackedScene" id=11]
[ext_resource path="res://Fonts/IndieFlower-Regular.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Scenes/HealthBox.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/EnemyHitbox.gd" type="Script" id=14]
[ext_resource path="res://Scenes/Dummy.gd" type="Script" id=15]
[ext_resource path="res://Graphics/Enemy/EnemyIdle1.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 12 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": false,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="Animation" id=4]
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01, 0.05, 0.09 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.2
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 32, 0, 32, 32, 0, 32, 32 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 32, 0, 32, 16, 0, 32, 32 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=14]
2/name = "TileDiag.png 2"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 11 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
4/name = "TileBlank.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 13 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
10/name = "TilesEdge.png 10"
10/texture = ExtResource( 7 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 32, 32 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 8 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
14/name = "TileCorner.png 14"
14/texture = ExtResource( 8 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 0, 32, 32 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape = SubResource( 9 )
14/shape_one_way = false
14/shape_one_way_margin = 1.0
14/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
14/z_index = 0
19/name = "TileSide.png 19"
19/texture = ExtResource( 5 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 0, 0, 32, 32 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shape_offset = Vector2( 0, 0 )
19/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
19/shape = SubResource( 10 )
19/shape_one_way = false
19/shape_one_way_margin = 1.0
19/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
19/z_index = 0
21/name = "spike1.png 21"
21/texture = ExtResource( 9 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 0, 0, 32, 32 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shape_offset = Vector2( 0, 0 )
21/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
21/shape = SubResource( 12 )
21/shape_one_way = false
21/shape_one_way_margin = 1.0
21/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
21/z_index = 0

[node name="S Area1" type="Node2D"]
script = ExtResource( 2 )

[node name="HealthBox" parent="." instance=ExtResource( 13 )]
position = Vector2( 1091.65, 703.436 )

[node name="Sign3" type="Area2D" parent="."]
pause_mode = 2
position = Vector2( -1076.74, 128.749 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Sign3"]
position = Vector2( 1111.11, 511.513 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sign3"]
position = Vector2( 1110.77, 526.665 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="Sign3"]

[node name="ColorRect" type="ColorRect" parent="Sign3/CanvasLayer"]
visible = false
margin_left = 15.0
margin_top = 592.0
margin_right = 1352.0
margin_bottom = 755.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Sign3/CanvasLayer/ColorRect"]
show_behind_parent = true
margin_left = -7.0
margin_top = -8.0
margin_right = 1345.0
margin_bottom = 168.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sign3/CanvasLayer/ColorRect"]
margin_left = 17.0
margin_top = 8.0
margin_right = 278.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dash to attack"

[node name="DoorUnder" parent="." instance=ExtResource( 11 )]
position = Vector2( 1049.86, 703.97 )
next_scene = "res://Scenes/S Area2.tscn"

[node name="Player" parent="." instance=ExtResource( 10 )]
position = Vector2( 188.809, 713.059 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -1.91364, 0.159912 )
current = true
smoothing_enabled = true

[node name="Dummy" type="KinematicBody2D" parent="."]
position = Vector2( -45.6696, 617.89 )
collision_layer = 8
script = ExtResource( 15 )

[node name="Sprite" type="AnimatedSprite" parent="Dummy"]
position = Vector2( 0.0078125, 0.0078125 )
frames = SubResource( 3 )
playing = true

[node name="HitTimer" type="Timer" parent="Dummy"]
wait_time = 0.5
one_shot = true

[node name="EffectsPlayer" type="AnimationPlayer" parent="Dummy"]
anims/Damage = SubResource( 4 )
anims/Dead = SubResource( 5 )
anims/Invulnerable = SubResource( 6 )
anims/Neutral = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="Dummy"]
position = Vector2( 3.05176e-05, -0.0883789 )
collision_layer = 524288
collision_mask = 524288
script = ExtResource( 14 )

[node name="Coll" type="CollisionPolygon2D" parent="Dummy/Area2D"]
polygon = PoolVector2Array( 3.23747, -15.7233, -0.582153, -13.9824, -1.52817, -7.99103, -8.886, 1.8895, -8.78089, 10.5087, -14.2841, 21.3867, 0.331192, 21.3867, -0.491486, 10.4715, 1.41498, 7.35532, 2.25587, -3.68146, 6.35524, -6.20413, 8.14215, -10.5137, 6.46455, -14.1799 )

[node name="DeathTimer" type="Timer" parent="Dummy"]
wait_time = 2.0
one_shot = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 14 )
cell_size = Vector2( 32, 32 )
collision_layer = 917509
collision_mask = 917509
format = 1
tile_data = PoolIntArray( 327671, 4, 0, 327672, 4, 0, 327673, 4, 0, 327674, 4, 0, 327675, 4, 0, 327676, 4, 0, 327677, 4, 0, 327678, 4, 0, 327679, 4, 0, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 4, 0, 262166, 4, 0, 262167, 4, 0, 262168, 4, 0, 262169, 4, 0, 262170, 4, 0, 262171, 4, 0, 262172, 4, 0, 262173, 4, 0, 262174, 4, 0, 262175, 4, 0, 262176, 4, 0, 262177, 4, 0, 262178, 4, 0, 262179, 4, 0, 262180, 4, 0, 262181, 4, 0, 262182, 4, 0, 262183, 4, 0, 393207, 4, 0, 327719, 4, 0, 458743, 4, 0, 393255, 4, 0, 524279, 4, 0, 458791, 4, 0, 589815, 4, 0, 524327, 4, 0, 655351, 4, 0, 589863, 4, 0, 720887, 4, 0, 655399, 4, 0, 786423, 4, 0, 720935, 4, 0, 851959, 4, 0, 786471, 4, 0, 917495, 4, 0, 852007, 4, 0, 983031, 4, 0, 917543, 4, 0, 1048567, 4, 0, 983079, 4, 0, 1114103, 4, 0, 1048615, 4, 0, 1179639, 4, 0, 1114151, 4, 0, 1245175, 4, 0, 1179687, 4, 0, 1310711, 4, 0, 1245223, 4, 0, 1376247, 4, 0, 1376253, 4, 0, 1376254, 4, 0, 1376255, 4, 0, 1310759, 4, 0, 1441783, 4, 0, 1441786, 4, 0, 1441787, 4, 0, 1441788, 4, 0, 1441789, 4, 0, 1441790, 4, 0, 1441791, 4, 0, 1376256, 4, 0, 1376257, 4, 0, 1376295, 4, 0, 1507319, 4, 0, 1507321, 4, 0, 1507322, 4, 0, 1507323, 4, 0, 1507324, 4, 0, 1507325, 4, 0, 1507326, 4, 0, 1507327, 4, 0, 1441792, 4, 0, 1441793, 4, 0, 1441794, 4, 0, 1441795, 4, 0, 1441831, 4, 0, 1572855, 4, 0, 1572856, 4, 0, 1572857, 4, 0, 1572858, 4, 0, 1572859, 4, 0, 1572860, 4, 0, 1572861, 4, 0, 1572862, 4, 0, 1572863, 4, 0, 1507328, 4, 0, 1507329, 4, 0, 1507330, 4, 0, 1507331, 4, 0, 1507332, 4, 0, 1507333, 4, 0, 1507334, 4, 0, 1507335, 4, 0, 1507336, 4, 0, 1507337, 4, 0, 1507338, 4, 0, 1507339, 4, 0, 1507340, 4, 0, 1507341, 4, 0, 1507342, 4, 0, 1507343, 4, 0, 1507344, 4, 0, 1507345, 4, 0, 1507346, 4, 0, 1507347, 4, 0, 1507348, 4, 0, 1507349, 4, 0, 1507350, 4, 0, 1507351, 4, 0, 1507352, 4, 0, 1507353, 4, 0, 1507354, 4, 0, 1507355, 4, 0, 1507356, 4, 0, 1507357, 4, 0, 1507358, 4, 0, 1507359, 4, 0, 1507360, 4, 0, 1507361, 4, 0, 1507362, 4, 0, 1507363, 4, 0, 1507364, 4, 0, 1507365, 4, 0, 1507366, 4, 0, 1507367, 4, 0 )

[connection signal="timeout" from="Dummy/HitTimer" to="Dummy" method="_on_HitTimer_timeout"]
[connection signal="Hit" from="Dummy/Area2D" to="Dummy" method="_on_Area2D_Hit"]
[connection signal="timeout" from="Dummy/DeathTimer" to="Dummy" method="_on_DeathTimer_timeout"]
